init and config post_service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,32 @@ services:
     ports:
       - "8189:8189"
     depends_on:
-      - postgres
+      - postgres_user_service
     environment:
       - SERVER_PORT=8189
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/social_network_db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_user_service:5432/user_service_db
       - SPRING_DATASOURCE_USER=kattsyn
       - SPRING_DATASOURCE_PASSWORD=katt
       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
       - JWT_SECRET=984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
       - JWT_LIFETIME=30m
       - API_PATH=api/v1
-  postgres:
+  postgres_user_service:
     image: postgres:latest
-    container_name: social_network
+    container_name: user_service
     environment:
       POSTGRES_USER: kattsyn
       POSTGRES_PASSWORD: katt
-      POSTGRES_DB: social_network_db
+      POSTGRES_DB: user_service_db
     ports:
       - "5432:5432"
+      
+  postgres_post_service:
+    image: postgres:latest
+    container_name: post_service
+    environment:
+      POSTGRES_USER: kattsyn
+      POSTGRES_PASSWORD: katt
+      POSTGRES_DB: post_service_db
+    ports:
+      - "5433:5433"
