--- a/PostService/build.gradle
+++ b/PostService/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.2'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id "com.google.protobuf" version "0.9.4"
 }
 
 group = 'kattsyn.dev'
@@ -27,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'javax.annotation:javax.annotation-api:1.3.1'
+
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-database-postgresql'
 
@@ -44,4 +47,30 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+protobuf {
+	protoc {
+		// The artifact spec for the Protobuf Compiler
+		artifact = 'com.google.protobuf:protoc:3.6.1'
+	}
+	plugins {
+		// Optional: an artifact spec for a protoc plugin, with "grpc" as
+		// the identifier, which can be referred to in the "plugins"
+		// container of the "generateProtoTasks" closure.
+		grpc {
+			artifact = 'io.grpc:protoc-gen-grpc-java:1.15.1'
+		}
+	}
+	generateProtoTasks {
+		ofSourceSet('main').configureEach {
+			plugins {
+				// Apply the "grpc" plugin whose spec is defined above, without
+				// options.  Note the braces cannot be omitted, otherwise the
+				// plugin will not be added. This is because of the implicit way
+				// NamedDomainObjectContainer binds the methods.
+				grpc { }
+			}
+		}
+	}
 }
