--- a/PostService/build.gradle
+++ b/PostService/build.gradle
@@ -26,7 +26,6 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'javax.annotation:javax.annotation-api:1.3.1'
 
@@ -37,6 +36,7 @@ dependencies {
 	implementation 'io.grpc:grpc-protobuf:1.65.1'
 	implementation 'io.grpc:grpc-api:1.65.1'
 	implementation 'io.grpc:grpc-stub:1.65.1'
+	implementation 'net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
