--- a/PostService/src/main/resources/application.yml
+++ b/PostService/src/main/resources/application.yml
@@ -13,5 +13,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-server:
-  port: 8190
+grpc:
+  server:
+    port: 9090
