--- a/PostService/build.gradle
+++ b/PostService/build.gradle
@@ -32,11 +32,14 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-database-postgresql'
 
+
 	implementation 'io.grpc:grpc-netty-shaded:1.65.1'
 	implementation 'io.grpc:grpc-protobuf:1.65.1'
 	implementation 'io.grpc:grpc-api:1.65.1'
 	implementation 'io.grpc:grpc-stub:1.65.1'
 	implementation 'net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE'
+
+	implementation project('grpc')
 
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
