--- a/SocialNetwork/.gitignore
+++ b/SocialNetwork/.gitignore
@@ -4,6 +4,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+gradlew
+gradlew.bat
+
 
 ### STS ###
 .apt_generated
