--- a/SocialNetwork/src/main/resources/application.yml
+++ b/SocialNetwork/src/main/resources/application.yml
@@ -24,7 +24,7 @@ api:
   path: api/v1
 grpc:
   server:
-    address: postservice:9090
+    address: localhost:9090
   client:
     post-service:
       #address: static://post_service:9090
