--- a/StatService/build.gradle
+++ b/StatService/build.gradle
@@ -13,14 +13,34 @@ java {
 	}
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-database-postgresql'
+
+	implementation 'javax.annotation:javax.annotation-api:1.3.1'
+	implementation 'net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE'
+	implementation 'io.grpc:grpc-netty-shaded:1.65.1'
+	implementation 'io.grpc:grpc-protobuf:1.65.1'
+	implementation 'io.grpc:grpc-api:1.65.1'
+	implementation 'io.grpc:grpc-stub:1.65.1'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation project('grpc')
+
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
