--- a/StatService/build.gradle
+++ b/StatService/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
 	implementation 'javax.annotation:javax.annotation-api:1.3.1'
 	implementation 'net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE'
+	implementation 'net.devh:grpc-client-spring-boot-starter:2.15.0.RELEASE'
 	implementation 'io.grpc:grpc-netty-shaded:1.65.1'
 	implementation 'io.grpc:grpc-protobuf:1.65.1'
 	implementation 'io.grpc:grpc-api:1.65.1'
@@ -47,5 +48,5 @@ dependencies {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+	//useJUnitPlatform()
 }
