--- a/StatService/src/main/resources/application.yml
+++ b/StatService/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
 grpc:
   server:
     port: 9091
+  client:
+    post-service:
+      address: static://localhost:9090
+      negotiation-type: plaintext
