added and configured kafka, completed StatService service

--- a/StatService/src/main/resources/application.yml
+++ b/StatService/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: StatService
   datasource:
-    url: jdbc:postgresql://localhost:5432/stat_service_db
+    url: jdbc:postgresql://localhost:5434/stat_service_db
     username: kattsyn
     password: katt
     driver-class-name: org.postgresql.Driver
@@ -13,6 +13,16 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  kafka:
+    consumer:
+      bootstrap-servers: ${KAFKA_CONSUMER_BOOTSTRAP-SERVERS}
+      client-id: "stat-service"
+      group-id: "event"
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "kattsyn.dev.StatService.entities, java.util, java.lang"
 grpc:
   server:
     port: 9091
