--- a/SocialNetwork/build.gradle
+++ b/SocialNetwork/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
+
+    implementation 'org.springframework.kafka:spring-kafka:3.2.3'
+
     implementation 'javax.annotation:javax.annotation-api:1.3.1'
 
     implementation 'org.flywaydb:flyway-core'
