--- a/StatService/build.gradle
+++ b/StatService/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-database-postgresql'
 
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
+	implementation 'org.springframework.kafka:spring-kafka:3.2.3'
+
 	implementation 'javax.annotation:javax.annotation-api:1.3.1'
 	implementation 'net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE'
 	implementation 'net.devh:grpc-client-spring-boot-starter:2.15.0.RELEASE'
