Added and implemented StatController, StatGrpcService etc

--- a/SocialNetwork/src/main/resources/application.yml
+++ b/SocialNetwork/src/main/resources/application.yml
@@ -36,3 +36,6 @@ grpc:
     post-service:
       address: static://localhost:9090
       negotiation-type: plaintext
+    stat-service:
+      address: static://localhost:9091
+      negotiation-type: plaintext
