--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       JWT_LIFETIME: 30m
       API_PATH: api/v1
       GRPC_CLIENT_POST-SERVICE_ADDRESS: postservice:9090
+      GRPC_CLIENT_STAT-SERVICE_ADDRESS: statservice:9091
       KAFKA_PRODUCER_BOOTSTRAP-SERVERS: 'broker:9099'
   
   postgres_user_service:
