--- a/PostService/src/main/resources/application.yml
+++ b/PostService/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  kafka:
+    producer:
+      bootstrap-servers: "broker:9099"
+      client-id: "post-service"
 grpc:
   server:
     port: 9090
