--- a/PostService/build.gradle
+++ b/PostService/build.gradle
@@ -45,7 +45,10 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.grpc:grpc-testing:1.65.1'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
