--- a/SocialNetwork/build.gradle
+++ b/SocialNetwork/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation "org.testcontainers:testcontainers:1.20.2"
+    testImplementation "org.testcontainers:junit-jupiter:1.20.2"
+    testImplementation "org.testcontainers:postgresql:1.20.2"
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
